# LibNetworks

./: .gitignore  .gitlab-ci.yml  .gitmodules  .installCMakeDocker.sh  .installProto.sh  AUTHORS  CMakeLists.txt  DocumentationConfiguration  GenerateVSSolution.bat  LICENSE  README.md  build.sh  generateProtobuff.sh  test.sh
lib_src/: CMakeLists.txt
lib_src/include/: APacket.h  Client.h  Common.h  ConnectionManager.h  Debug.h  FileExchanger.h  IConnection.h  IPacket.h  IPacketConnection.h  IRawConnection.h  IServer.h  PacketObserver.h  PacketParser.h  Server.h  TCPClient.h  TCPConnection.h  TCPConnectionManager.h  TCPPacket.h  TCPPacketConnection.h  TCPRawConnection.h  TCPServer.h  UDPClient.h  UDPConnection.h  UDPConnectionManager.h  UDPPacket.h  UDPServer.h
lib_src/proto/: CMakeLists.txt  TCPMessage.proto
lib_src/src/: APacket.cpp  ConnectionManager.cpp  FileExchanger.cpp  Server.cpp  TCPClient.cpp  TCPConnection.cpp  TCPConnectionManager.cpp  TCPPacket.cpp  TCPPacketConnection.cpp  TCPRawConnection.cpp  TCPServer.cpp  UDPClient.cpp  UDPConnection.cpp  UDPConnectionManager.cpp  UDPPacket.cpp  UDPServer.cpp
proto/: CMakeLists.txt  TCPMessage.proto  test.proto
scripts/linux/: ProtoCMakeLists.txt  initRepo.sh  test.sh  testFileExchange.sh  testTCP.sh  testUDP.sh
scripts/windows/: GenerateVSSolution.bat
tests/: outputFileExchange.txt  outputTCP.txt  outputUDP.txt
tests/client/: CMakeLists.txt
tests/client/src/: main.cpp
tests/clientFile/: CMakeLists.txt
tests/client_multithread/: CMakeLists.txt
tests/fullClient/: CMakeLists.txt
tests/fullClient/include/: FullClient.h
tests/fullClient/src/: FullClient.cpp  main.cpp
tests/hello_world/: CMakeLists.txt
tests/hello_world/src/: main.cpp
tests/server/: CMakeLists.txt
tests/server/include/: HelloWorld.h
tests/server/src/: main.cpp
tests/tcpClient/: CMakeLists.txt
tests/tcpClient/src/: main.cpp
tests/tcpClientFile/: CMakeLists.txt
tests/tcpClientFile/src/: main.cpp
tests/tcpClientMultiThread/: CMakeLists.txt
tests/tcpClientMultiThread/src/: main.cpp
tests/tcpFileClient/: CMakeLists.txt
tests/tcpFileClient/src/: main.cpp
tests/tcpFileServer/: CMakeLists.txt
tests/tcpFileServer/src/: main.cpp
tests/tcpServer/: CMakeLists.txt
tests/tcpServer/src/: main.cpp
tests/udpClient/: CMakeLists.txt
tests/udpClient/src/: main.cpp
tests/udpServer/: CMakeLists.txt
tests/udpServer/src/: main.cpp
